# vocabchan

./: README.md  README_CN.md  README_JP.md  build.bat  config.py  config_ui.py  core.py  generate_skeleton.py  main.py  pyproject.toml
docs/: product-scope.md  roadmap.md
profiles/: diagnostics_history.json  index.json  window_geometry.json
scripts/: db_doctor.py  dev_run.py  migrate_legacy_data.py  package_release.py  release_regression.py
