[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocabchan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=1.26.0",
    "platformdirs>=4.2.0",
    "PySide6>=6.6.0",
    "websockets>=12.0",
    "soundfile>=0.12.1",
    "soundcard>=0.4.3; sys_platform == 'win32'",
    "pyaudiowpatch>=0.2.12.8; sys_platform == 'win32'",
]

[project.optional-dependencies]
webengine = ["PySide6-WebEngine>=6.6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
package = ["pyinstaller>=6.3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
